--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 isort==5.10.1
 mysqlclient==2.1.1
+Pillow==9.3.0
 PyJWT==2.6.0
 pytz==2022.6
 sqlparse==0.4.3
