--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.5.2
 Django==4.1.3
 django-cors-headers==3.13.0
+django-dotenv==1.4.2
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 isort==5.10.1
