less_6 and hw_6

--- a/.env
+++ b/.env
@@ -6,3 +6,8 @@ DB_USER=root
 DB_PASSWORD=rootroot
 DB_HOST=localhost
 DB_PORT=3306
+
+EMAIL_HOST=smtp.gmail.com
+EMAIL_HOST_USER=test.igor.1997@gmail.com
+EMAIL_HOST_PASSWORD=gokhftubtzuizndi
+EMAIL_PORT=587
