--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,13 @@
-SECRET_KEY=
-DEBUG=
+SECRET_KEY='django-insecure-5=e96a#c=8dsufqsj0^p=_d4kz2k#@216vsga5vp*!c&&%leb&'
+DEBUG=True
 
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
-DB_HOST=
-DB_PORT=
+DB_NAME=my_db
+DB_USER=root
+DB_PASSWORD=rootroot
+DB_HOST=localhost
+DB_PORT=3306
+
+EMAIL_HOST=smtp.gmail.com
+EMAIL_HOST_USER=test.igor.1997@gmail.com
+EMAIL_HOST_PASSWORD=gokhftubtzuizndi
+EMAIL_PORT=587
