--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.5.2
 Django==4.1.3
 django-cors-headers==3.13.0
 django-dotenv==1.4.2
+django-filter==22.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 isort==5.10.1
